Change baseurl to ruilin-li.github.io

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ office: Room 146B, Skiles Building, 686 Cherry St
 
 markdown: kramdown
 
-baseurl: /ruilin-li
+baseurl: /ruilin-li.github.io
 
 remoteurl: https://github.com/ruilin-li.github.io
 
