--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ruilin Li  &middot;  Machine Learning @ Georgia Tech
+title: Ruilin Li @ Georgia Tech
 
 email: ruilin.li@gatech.edu
 github: http://github.com/ruilin-li
